@@ -1,6 +1,7 @@
 2006-01-22  Jan Nieuwenhuizen  <janneke@gnu.org>
 
-	* flower/axis.cc: Remove.
+	* flower/direction.cc: 
+	* flower/axis.cc: Unused.  Remove.
 
 	* configure.in (--enable-std-string): New option.
 
